--- a/app/src/main/res/layout/course_list_fragment.xml
+++ b/app/src/main/res/layout/course_list_fragment.xml
@@ -19,7 +19,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/standard_margin"
+        android:layout_marginEnd="@dimen/small_margin"
         android:text="@string/show_only_favorites"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/course_list_fragment_switch"
@@ -30,6 +30,7 @@
         android:id="@+id/course_list_fragment_switch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/small_margin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
