--- a/app/src/main/res/layout/app_activity.xml
+++ b/app/src/main/res/layout/app_activity.xml
@@ -6,7 +6,8 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:menu="@menu/main_menu">
+    tools:menu="@menu/main_menu"
+    android:fitsSystemWindows="true">
 
     <!-- This LinearLayout represents the contents of the screen  -->
     <LinearLayout
