--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 <group android:checkableBehavior="single">
-    <item android:id="@+id/item_login" android:title="@string/appbar_item_login" android:icon="@android:drawable/ic_input_add" />
-    <item android:id="@+id/item_mentor" android:title="@string/appbar_item_mentor"  android:icon="@android:drawable/ic_input_add" />
-    <item android:id="@+id/item_letcures" android:title="@string/appbar_item_lectures"  android:icon="@android:drawable/ic_input_add" />
-    <item android:id="@+id/item_map" android:title="@string/appbar_item_map"  android:icon="@android:drawable/ic_menu_zoom" />
+    <item android:id="@+id/item_login" android:title="@string/appbar_item_login" android:icon="@drawable/login_user" app:showAsAction="collapseActionView"/>
+    <item android:id="@+id/item_mentor" android:title="@string/appbar_item_mentor"  android:icon="@android:drawable/ic_menu_view"  app:showAsAction="collapseActionView"/>
+    <item android:id="@+id/item_letcures" android:title="@string/appbar_item_lectures"  android:icon="@android:drawable/stat_notify_chat"  app:showAsAction="collapseActionView"/>
+    <item android:id="@+id/item_map" android:title="@string/appbar_item_map"  android:icon="@android:drawable/ic_dialog_map"  app:showAsAction="collapseActionView"/>
 </group>
-
+<item android:id="@+id/item_about" android:title="About App" android:icon="@android:drawable/ic_menu_myplaces" app:showAsAction="collapseActionView"/>
 </menu>
