--- a/app/src/main/res/layout/app_activity.xml
+++ b/app/src/main/res/layout/app_activity.xml
@@ -6,7 +6,9 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:menu="@menu/main_menu">
+    android:fitsSystemWindows="true"
+    tools:menu="@menu/main_menu"
+    tools:openDrawer="start">
 
     <!-- This LinearLayout represents the contents of the screen  -->
     <LinearLayout
@@ -15,17 +17,23 @@
         android:orientation="vertical">
 
         <!-- The ActionBar displayed at the top -->
-        <include
-            layout="@layout/toolbar"
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/app_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:background="?attr/colorPrimary"
+            android:elevation="4dp"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            app:navigationIcon="@drawable/ic_baseline_menu_24"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
         <!-- The main content view where fragments are loaded -->
-        <FrameLayout
-            android:id="@+id/flContent"
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/container"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+            android:layout_height="match_parent" />
     </LinearLayout>
 
     <!-- The navigation drawer that comes from the left -->
@@ -37,12 +45,6 @@
         android:layout_gravity="start"
         android:background="@android:color/white"
         app:menu="@menu/main_menu" />
-
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/container"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
 </androidx.drawerlayout.widget.DrawerLayout>
 
 
