--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,27 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<menu
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/item_log_out"
             android:icon="@drawable/ic_logout"
             android:title="@string/appbar_item_log_out"
-            app:showAsAction="never"
-            />
-<!--        <item-->
-<!--            android:id="@+id/item_mentor"-->
-<!--            android:icon="@android:drawable/ic_input_add"-->
-<!--            android:title="@string/appbar_item_mentor" />-->
-<!--        <item-->
-<!--            android:id="@+id/item_lectures"-->
-<!--            android:icon="@android:drawable/ic_input_add"-->
-<!--            android:title="@string/appbar_item_lectures" />-->
-<!--        <item-->
-<!--            android:id="@+id/item_map"-->
-<!--            android:icon="@android:drawable/ic_menu_zoom"-->
-<!--            android:title="@string/appbar_item_map" />-->
+            app:showAsAction="never" />
+        <!--        <item-->
+        <!--            android:id="@+id/item_mentor"-->
+        <!--            android:icon="@android:drawable/ic_input_add"-->
+        <!--            android:title="@string/appbar_item_mentor" />-->
+        <!--        <item-->
+        <!--            android:id="@+id/item_lectures"-->
+        <!--            android:icon="@android:drawable/ic_input_add"-->
+        <!--            android:title="@string/appbar_item_lectures" />-->
+        <!--        <item-->
+        <!--            android:id="@+id/item_map"-->
+        <!--            android:icon="@android:drawable/ic_menu_zoom"-->
+        <!--            android:title="@string/appbar_item_map" />-->
     </group>
-
+    <item
+        android:id="@+id/item_about"
+        android:icon="@android:drawable/ic_menu_myplaces"
+        android:title="About App"
+        app:showAsAction="collapseActionView" />
 </menu>
