--- a/app/src/main/res/layout/add_lecture_fragment.xml
+++ b/app/src/main/res/layout/add_lecture_fragment.xml
@@ -14,7 +14,6 @@
         android:layout_marginTop="@dimen/large_margin"
         android:text="Add lecture"
         android:textAllCaps="true"
-
         android:textColor="@color/gray"
         android:textSize="@dimen/text_title_size"
         android:textStyle="bold"
@@ -38,6 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/large_margin"
         app:layout_constraintTop_toBottomOf="@id/add_lecture_text"
+        app:errorEnabled="true"
         tools:layout_editor_absoluteX="132dp">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -51,6 +51,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/add_lecture_fragment_title"
+        app:errorEnabled="true"
+
         tools:layout_editor_absoluteX="117dp">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -65,6 +67,8 @@
         android:layout_height="wrap_content"
         android:hint="@string/github_repo"
         app:layout_constraintTop_toBottomOf="@+id/add_lecture_fragment_youtubeUrl"
+        app:errorEnabled="true"
+
         tools:layout_editor_absoluteX="139dp">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -79,6 +83,8 @@
         android:layout_height="wrap_content"
         android:hint="@string/telegram_channel"
         app:layout_constraintTop_toBottomOf="@+id/add_lecture_fragment_github"
+        app:errorEnabled="true"
+
         tools:layout_editor_absoluteX="177dp">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -92,6 +98,8 @@
         android:layout_height="wrap_content"
         android:hint="@string/img_url"
         app:layout_constraintTop_toBottomOf="@+id/add_lecture_fragment_telegramChannel"
+        app:errorEnabled="true"
+
         tools:layout_editor_absoluteX="217dp">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -105,6 +113,8 @@
         android:layout_height="wrap_content"
         android:hint="@string/tags"
         app:layout_constraintTop_toBottomOf="@+id/add_lecture_fragment_imgUrl"
+        app:errorEnabled="true"
+
         tools:layout_editor_absoluteX="151dp">
 
         <com.google.android.material.textfield.TextInputEditText
