--- a/app/src/main/res/layout/course_item_fragment.xml
+++ b/app/src/main/res/layout/course_item_fragment.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/small_margin"
     android:layout_marginStart="@dimen/standard_margin"
     android:layout_marginEnd="@dimen/standard_margin"
-    app:cardElevation="2dp"
+    android:layout_marginBottom="@dimen/small_margin"
     app:cardBackgroundColor="#F5F5F5"
-    app:cardCornerRadius="10dp">
+    app:cardCornerRadius="10dp"
+    app:cardElevation="2dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -27,8 +27,8 @@
             app:layout_constraintTop_toTopOf="@id/course_logo"
             tools:text="Androidacademy course" />
 
-        <TextView
-            android:id="@+id/course_item_fragment_lecturescount"
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/course_item_tags"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
@@ -36,7 +36,7 @@
             app:layout_constraintTop_toBottomOf="@id/course_item_fragment_coursename"
             tools:text="N lectures" />
 
-        <ImageView
+        <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/course_favourite_star"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -44,9 +44,10 @@
             android:src="@drawable/ic_baseline_star_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:tint="@color/gray" />
+            app:tint="@color/gray"
+            tools:backgroundTint="@color/gold" />
 
-        <ImageView
+        <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/course_logo"
             android:layout_width="100dp"
             android:layout_height="100dp"
@@ -56,6 +57,7 @@
             android:src="@drawable/academy_logo"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:shapeAppearanceOverlay="@style/roundedImageView" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
