--- a/app/src/main/res/layout/course_list_fragment.xml
+++ b/app/src/main/res/layout/course_list_fragment.xml
@@ -10,6 +10,7 @@
         android:id="@+id/course_list_progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="?attr/colorOnSecondary"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
