--- a/app/src/main/res/layout/lection_fragment.xml
+++ b/app/src/main/res/layout/lection_fragment.xml
@@ -16,6 +16,7 @@
         android:id="@+id/ratingBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        style="?attr/ratingBarStyleSmall"
         android:max="5"
         android:progress="0" />
 
@@ -50,7 +51,6 @@
             android:layout_weight="5"
             android:fontFamily="serif"
             android:padding="8dp"
-            android:editable="false"
             android:inputType="textUri"
             android:text="http://youtube.com/sample"
             android:textColor="#c1c1c1" />
