--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -24,6 +24,6 @@
     <item
         android:id="@+id/item_about"
         android:icon="@drawable/ic_info_24"
-        android:title="About App"
+        android:title="About"
         app:showAsAction="collapseActionView" />
 </menu>
