--- a/app/src/main/res/layout/app_activity.xml
+++ b/app/src/main/res/layout/app_activity.xml
@@ -44,6 +44,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:background="@android:color/white"
+        app:headerLayout="@layout/header_navigation_drawer"
         app:menu="@menu/main_menu" />
 </androidx.drawerlayout.widget.DrawerLayout>
 
