--- a/app/src/main/res/layout/lectures_list_fragment.xml
+++ b/app/src/main/res/layout/lectures_list_fragment.xml
@@ -16,7 +16,7 @@
         android:id="@+id/lectures_fragment_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/small_margin"
+        android:layout_margin="@dimen/standard_margin"
         android:clickable="true"
         android:focusable="true"
         app:layout_constraintBottom_toBottomOf="parent"
