--- a/app/src/main/res/layout/lectures_item_fragment.xml
+++ b/app/src/main/res/layout/lectures_item_fragment.xml
@@ -4,9 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="@dimen/small_margin"
-    app:cardUseCompatPadding="true"
-    app:cardElevation="@dimen/small_margin">
+    android:layout_marginStart="@dimen/standard_margin"
+    android:layout_marginEnd="@dimen/standard_margin"
+    android:layout_marginBottom="@dimen/small_margin"
+    app:cardBackgroundColor="#F5F5F5"
+    app:cardCornerRadius="10dp"
+    app:cardElevation="2dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -49,11 +52,12 @@
                     tools:text="N lectures" />
             </LinearLayout>
 
-            <ImageButton
+            <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/lecture_item_fragment_Imgurl"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_margin="@dimen/standard_margin"
+                app:shapeAppearanceOverlay="@style/roundedImageView"
                 android:src="@drawable/common_google_signin_btn_icon_dark" />
         </LinearLayout>
     </LinearLayout>
