--- a/app/src/main/res/layout/lection_fragment.xml
+++ b/app/src/main/res/layout/lection_fragment.xml
@@ -48,8 +48,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/small_margin"
-                android:textSize="@dimen/text_mid_size"
                 android:text="Rate this lecture:"
+                android:textSize="@dimen/text_mid_size"
                 app:layout_constraintBottom_toBottomOf="@id/lecture_ratingBar"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@id/lecture_ratingBar" />
@@ -62,8 +62,10 @@
                 android:layout_marginStart="@dimen/small_margin"
                 android:layout_marginTop="@dimen/large_margin"
                 android:layout_marginEnd="@dimen/standard_margin"
-                android:max="5"
-                android:progress="0"
+                android:clickable="true"
+                android:focusable="true"
+                android:isIndicator="false"
+                android:numStars="5"
                 app:layout_constraintStart_toEndOf="@id/rate_lecture_text"
                 app:layout_constraintTop_toTopOf="@id/lecture_telegram_button" />
 
@@ -183,12 +185,12 @@
                 android:layout_weight="5"
                 android:fontFamily="serif"
                 android:padding="8dp"
-                tools:text="http://youtube.com/sample"
                 android:textColor="#c1c1c1"
                 app:layout_constraintBottom_toBottomOf="@id/lecture_telegram_button"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/lecture_telegram_button"
-                app:layout_constraintTop_toTopOf="@id/lecture_telegram_button" />
+                app:layout_constraintTop_toTopOf="@id/lecture_telegram_button"
+                tools:text="http://youtube.com/sample" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
