--- a/app/src/main/res/layout/add_lecture_fragment.xml
+++ b/app/src/main/res/layout/add_lecture_fragment.xml
@@ -11,7 +11,7 @@
         android:id="@+id/add_lecture_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/large_margin"
+        android:layout_marginTop="32dp"
         android:text="Add lecture"
         android:textAllCaps="true"
         android:textColor="@color/gray"
@@ -35,9 +35,9 @@
         android:id="@+id/add_lecture_fragment_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/large_margin"
-        app:layout_constraintTop_toBottomOf="@id/add_lecture_text"
+        android:layout_marginTop="32dp"
         app:errorEnabled="true"
+        app:layout_constraintTop_toBottomOf="@id/add_lecture_text"
         tools:layout_editor_absoluteX="132dp">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -121,4 +121,20 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+    android:id="@+id/add_lecture_fragment_date"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:hint="@string/date_label"
+    app:layout_constraintTop_toBottomOf="@+id/add_lecture_fragment_tags"
+    app:errorEnabled="true"
+
+    tools:layout_editor_absoluteX="139dp">
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="" />
+</com.google.android.material.textfield.TextInputLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
