--- a/app/src/main/res/layout/add_lecture_fragment.xml
+++ b/app/src/main/res/layout/add_lecture_fragment.xml
@@ -122,19 +122,12 @@
             android:layout_height="wrap_content" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-    android:id="@+id/add_lecture_fragment_date"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:hint="@string/date_label"
-    app:layout_constraintTop_toBottomOf="@+id/add_lecture_fragment_tags"
-    app:errorEnabled="true"
-
-    tools:layout_editor_absoluteX="139dp">
-
-    <com.google.android.material.textfield.TextInputEditText
+    <Button
+        android:id="@+id/add_lecture_fragment_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="" />
-</com.google.android.material.textfield.TextInputLayout>
+        android:text="@string/date_label"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/add_lecture_fragment_tags" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
